https://inter-mediator.org/
=================================

Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository.
Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  https://inter-mediator.info/ja/for-developers/migration.html

Ver.10 (In Development)
- The Service Server by node is not booted in default settings. If you need to use it, you have to modify the setting
  in the params.php file. The Service Server requires for server side validation, and synchronizing with clients.
- The _im_seq pesudo field appears in context. It shows the sequential number in the context records from 1.
- The _im_count pesudo field appears in context. It shows how many records in the context.
- In the INTERMediatorOnPage class buttonClassCopy, buttonClassDelete, buttonClassInsert, buttonClassMaster and
  buttonClassBackNavi properties are defined. These can be set the additional class values to relevant buttons.
- In where clause of generated sql, the values for numeric fields express by numeric not string.
- IMLibLocalContext has the method clearAllConditions for being convenient to define 'clear' button in search functions.
- 'numeric-fields' and 'time-fields' can be defined in context definition with an array of field names. Calculation
  field of the SQLite view doesn't have a type and condition with numeric field have to numeric value.
- Error/Warning/Debug messages can write to the PHP's error log with params.php's variables $errorMessageLogging,
  $warningMessageLogging and $debugMessageLogging.
- The operation logging feature can customize for extending fields with INTERMediator\DB\Support\OperationLogExtension.
  Also $recordingOperations and $accessLogExtensionClass can be defined in params.php file.
- Local Context conditions (i.e.:data-im="_@condition:...") can control operations of the generated sql statement with